--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
+  background-color: #F1F1F1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,7 +31,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
